<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_setting"
        android:orderInCategory="100"
        android:title="@string/set"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_order"
        android:orderInCategory="10"
        android:title="@string/order"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/con"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_fav"
        android:orderInCategory="30"
        android:title="@string/fav"
        app:showAsAction="never"/>




</menu>